# VulkanRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.bat
includes/: vlkg_device.hpp  vlkg_firstapp.hpp  vlkg_pipeline.hpp  vlkg_swap_chain.hpp  vlkg_window.hpp
shaders/: fragment.frag  vertex.vert  vertex.vert.spv
src/: main.cpp  vlkg_device.cpp  vlkg_firstapp.cpp  vlkg_pipeline.cpp  vlkg_swap_chain.cpp  vlkg_window.cpp
